--- a/VueJS/Exercice/Exo6/package.json
+++ b/VueJS/Exercice/Exo6/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-chrono",
+  "name": "exo6",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "uuid": "^9.0.1",
     "vue": "^3.3.11"
   },
